# BiliVideoPlayer

./:  .gitignore  .gitattributes  CMakeLists.txt  LICENSE  README.en.md  README.md
client/BiliVideoPlayer/: CMakeLists.txt  README.md  avatarbutton.cpp  avatarbutton.h  barrageedit.cpp  barrageedit.h  biliPlayer.rc  bilivideoplayer.cpp  bilivideoplayer.h  bilivideoplayer.ui  bulletscreenitem.cpp  bulletscreenitem.h  checktable.cpp  checktable.h  checktableitem.cpp  checktableitem.h  checktableitem.ui  confirmdialog.h  edituserdialog.ui  homepagewidget.cpp  homepagewidget.h  imageRes.qrc  login.cpp  modifymyselfdialog.cpp  myselfwidget.cpp  myselfwidget.ui  newpassworddialog.h  paginator.h  playerpage.cpp  playerpage.h  playerpage.ui  playspeed.cpp  playspeed.h  playspeed.ui  roletable.cpp  roletable.h  roletable.ui  roletableitem.cpp  roletableitem.ui  searchlineedit.cpp  (+12 more)
client/BiliVideoPlayer/model/: data.cpp  data.h  datacenter.cpp  datacenter.h
client/BiliVideoPlayer/mpv/: mpvplayer.cpp  mpvplayer.h
client/BiliVideoPlayer/netclient/: netclient.cpp  netclient.h
client/BiliVideoPlayer/player/: audiodecoder.cpp  audiodecoder.h  avpacketqueue.cpp  avpacketqueue.h  player.cpp  player.h  player_internals.h
client/BiliVideoPlayer/test/: TestHttp.h
client/BiliVideoPlayerSystem/: CMakeLists.txt  adminwidget.cpp  adminwidget.h  adminwidget.ui  avatarbutton.cpp  avatarbutton.h  barrageedit.cpp  barrageedit.h  bilivideoplayer.cpp  bilivideoplayer.h  bilivideoplayer.ui  bulletscreenitem.cpp  bulletscreenitem.h  checktable.cpp  checktable.h  checktable.ui  checktableitem.cpp  checktableitem.h  checktableitem.ui  confirmdialog.cpp  confirmdialog.h  edituserdialog.cpp  edituserdialog.h  edituserdialog.ui  homepagewidget.cpp  homepagewidget.h  homepagewidget.ui  login.cpp  login.h  login.ui  main.cpp  modifymyselfdialog.cpp  modifymyselfdialog.h  modifymyselfdialog.ui  myselfwidget.cpp  myselfwidget.h  myselfwidget.ui  newpassworddialog.cpp  newpassworddialog.h  newpassworddialog.ui  (+36 more)
client/BiliVideoPlayerSystem/model/: data.cpp  data.h  datacenter.cpp  datacenter.h
client/BiliVideoPlayerSystem/mpv/: mpvplayer.cpp  mpvplayer.h
client/BiliVideoPlayerSystem/netclient/: netclient.cpp  netclient.h
client/BiliVideoPlayerSystem/test/: TestHttp.h  TestJson.h
client/BiliVideoPlayerSystem/videos/: 111.m3u8
client/MockServer/: CMakeLists.txt  main.cpp  server.cpp  server.h  util.h
client/MockServer/videos/: 111.m3u8  output1.ts  output2.ts
client/MyPlayerQt/: CMakeLists.txt  main.cpp  myplayerqt.cpp  myplayerqt.h
scaffold/: CMakeLists.txt
scaffold/cmake/: Bili_scaffoldConfig.cmake.in  Finddepends.cmake
scaffold/example/amqpcpp/: dlx_publish.cc  dlx_subscribe.cc  makefile  simple_publish.cc  simple_subscribe.cc
scaffold/example/brpc/: async_client.cc  async_server.cc  cal.proto  http_client.cc  http_server.cc  makefile  sync_client.cc  sync_server.cc
scaffold/example/elasticsearch/: client.cc  makefile
scaffold/example/etcd/: dir_get.cc  dir_put.cc  makefile  simple_get.cc  simple_put.cc
scaffold/example/fastdfs/: client.conf  download.cc  makefile  remove.cc  upload.cc
scaffold/example/ffmpeg/: hls.cc  makefile
scaffold/example/gflags/: child.cc  main.cc  main.conf  makefile
scaffold/example/gtest/: environment.cc  global.cc  makefile  simple.cc
scaffold/example/httplib/: makefile  server.cc
scaffold/example/jsoncpp/: makefile  serialize.cc  test1.cc  test2.cc  test3.cc  unserialize.cc
scaffold/example/mail/: mail.cc  makefile
scaffold/example/odb/: data.sql  makefile  person.hxx  test.cpp
scaffold/example/odb/curd/: curd.cc  makefile  student.h
scaffold/example/odb/group/: group.cc  makefile  student.h
scaffold/example/odb/limit/: limit.cc  makefile  student.h
scaffold/example/odb/native/: makefile  native.cc  student.h
scaffold/example/odb/view/: makefile  student.h  view.cc
scaffold/example/protobuf/: makefile  person.proto  serialize.cc
scaffold/example/redis/: complement.cc  hash.cc  list.cc  makefile  pipeline.cc  set.cc  string.cc  transaction.cc  watch.cc  zset.cc
scaffold/example/spdlog/: log.cc  log.h  main  main.cc  makefile
scaffold/example/websocketpp/: makefile  server.cc
scaffold/source/: elastic.cc  elastic.h  etcd.cc  etcd.h  fdfs.cc  fdfs.h  hls.cc  hls.h  log.cc  log.h  mail.cc  mail.h  mq.cc  mq.h  odb.cc  odb.h  redis.cc  redis.h  rpc.cc  rpc.h  util.cc  util.h
scaffold/test/brpc/: cal.proto  client.cc  makefile  server.cc
scaffold/test/elastic/: Makefile  test.cc
scaffold/test/etcd/: discovery.cc  makefile  registry.cc
scaffold/test/etcd_brpc/: CMakeLists.txt  cal.proto  rpc_client.cc  rpc_server.cc
scaffold/test/fastdfs/: makefile  test.cc
scaffold/test/ffmpeg/: makefile  test_hls.cc
scaffold/test/jsoncpp/: json_test.cc  makefile
scaffold/test/mail/: CMakeLists.txt  test.cc
scaffold/test/mq/: delayed_publish.cc  delayed_subscribe.cc  makefile  simple_publish.cc  simple_subscribe.cc
scaffold/test/odb/: makefile  odb_test.cc  student.h
scaffold/test/redis/: makefile  test.cc
scaffold/test/scaffold/: CMakeLists.txt  scaffold.cc
scaffold/test/spdlog/: log_test.cc  makefile
server/data/: data.cc  data.h  file.cc  file.h
server/proto/: base.proto  file.proto  http.proto  message.proto  user.proto  video.proto
